--- a/curs7/mycrud/backend/package.json
+++ b/curs7/mycrud/backend/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.35",
