--- a/curs7/mycrud/backend/package.json
+++ b/curs7/mycrud/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "server.ts",
   "scripts": {
     "build": "npx tsc",
@@ -24,9 +23,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^17.0.35",
+    "@types/node": "^17.0.38",
     "concurrently": "^7.2.1",
     "nodemon": "^2.0.16",
-    "typescript": "^4.6.4"
-  }
+    "typescript": "^4.7.2"
+  },
+  "description": ""
 }
